# FFmpeg-Examples

./: CMakeLists.txt  README
Source/EncodeAudioTone/: main.cpp  main.hpp
cmake/modules/: FindFFMPEG.cmake
